RESOLVED FIXED46357
Fix warnings regarding print format in 64 bits
https://bugs.webkit.org/show_bug.cgi?id=46357
Summary Fix warnings regarding print format in 64 bits
Lucas De Marchi
Reported 2010-09-23 08:33:43 PDT
Fix warnings regarding print format in 64 bits
Attachments
Patch (1.88 KB, patch)
2010-09-23 08:35 PDT, Lucas De Marchi
no flags
Lucas De Marchi
Comment 1 2010-09-23 08:35:25 PDT
Csaba Osztrogonác
Comment 2 2010-09-23 10:03:35 PDT
It is a good idea to use format specifier macros. I absolutely support using them, and would be happy if we can get rid of previously #ifdef ... # else ... #endif ugly hacks. Some of them were made by myself, because I can't find many occurrences of these macros.
Csaba Osztrogonác
Comment 3 2010-09-23 10:28:40 PDT
Comment on attachment 68524 [details] Patch I think it is a good and necessary direction, r=me.
Lucas De Marchi
Comment 4 2010-09-23 10:53:03 PDT
Comment on attachment 68524 [details] Patch Clearing flags on attachment: 68524 Committed r68164: <http://trac.webkit.org/changeset/68164>
Lucas De Marchi
Comment 5 2010-09-23 10:53:13 PDT
All reviewed patches have been landed. Closing bug.
Ismail Donmez
Comment 7 2010-09-24 06:35:33 PDT
This broke Windows CE compilation, inttypes.h does not exist on Windows CE.
Csaba Osztrogonác
Comment 8 2010-09-24 07:37:10 PDT
(In reply to comment #7) > This broke Windows CE compilation, inttypes.h does not exist on Windows CE. New bug to track this fail: https://bugs.webkit.org/show_bug.cgi?id=46463
Brent Fulgham
Comment 9 2010-10-03 23:12:34 PDT
This change also broke the WinCairo build of windows.
Csaba Osztrogonác
Comment 10 2010-10-03 23:55:25 PDT
(In reply to comment #9) > This change also broke the WinCairo build of windows. Sorry for breakage. :( Next time I will check the newest WinCairo buildbot. The new bot would be useful. Thanks for the fix landed in http://trac.webkit.org/changeset/68998
Laszlo Gombos
Comment 11 2012-09-25 13:04:20 PDT
*** Bug 38809 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.