2010-09-23  Lucas De Marchi  <lucas.demarchi@profusion.mobi>

Reviewed by Csaba Osztrogonác.

        Fix warnings regarding print format in 64 bits
        https://bugs.webkit.org/show_bug.cgi?id=46357

        Use inttypes.h in order to have portable print formats across 32 and
        64 bits.

        * platform/sql/SQLiteFileSystem.cpp:
        (WebCore::SQLiteFileSystem::getFileNameForNewDatabase):

git-svn-id: svn://svn.chromium.org/blink/trunk@68164 bbb929c8-8fbe-4397-9dbb-9b2b20218538