third_party/WebKit/WebCore/platform/sql/SQLiteFileSystem.cpp
@@ -29,12 +29,14 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
+#define __STDC_FORMAT_MACROS
 #include "config.h"
 #include "SQLiteFileSystem.h"
 
 #include "FileSystem.h"
 #include "SQLiteDatabase.h"
 #include "SQLiteStatement.h"
+#include <inttypes.h>
 #include <sqlite3.h>
 
 namespace WebCore {
@@ -74,10 +76,10 @@ String SQLiteFileSystem::getFileNameForNewDatabase(const String& dbDir, const St
     String fileName;
     do {
         ++seq;
-        fileName = pathByAppendingComponent(dbDir, String::format("%016llx.db", seq));
+        fileName = pathByAppendingComponent(dbDir, String::format("%016"PRIx64".db", seq));
     } while (fileExists(fileName));
 
-    return String::format("%016llx.db", seq);
+    return String::format("%016"PRIx64".db", seq);
 }
 
 String SQLiteFileSystem::appendDatabaseFileNameToPath(const String& path, const String& fileName)
